# chasm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.ps1  build.sh  foundry.toml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
contracts/: Bank.sol  Counter.sol  IllusionHouse.sol  InjuBank.sol  MirrorProxy.sol  Setup.sol
src/: anvil.rs  compiler.rs  main.rs  watcher.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: BottomPanel.tsx  Cheatcodes.tsx  ContractDetailsTab.tsx  ConverterView.tsx  Explorer.tsx  RequestTab.tsx  SettingsModal.tsx  StructBuilder.tsx  TransactionViewer.tsx  UserProfile.tsx
